fix(core): 🐛 increase mw-body-header z-index
This should allow modals in mw-body-header to be higher than
the custom sticky headers

--- a/resources/skins.citizen.styles/layout.less
+++ b/resources/skins.citizen.styles/layout.less
@@ -17,7 +17,8 @@
 
 .mw-body-header {
 	position: sticky;
-	z-index: @z-index-page-header;
+	// So that the modal are above custom sticky headers
+	z-index: @z-index-page-header + 1;
 	display: flex;
 	flex-wrap: wrap;
 	align-items: center;
